Fixed overflow error

--- a/tvwatchlist-react/src/App.css
+++ b/tvwatchlist-react/src/App.css
@@ -268,12 +268,13 @@ nav.navbar-expand-sm.navbar-dark.bg-primary.mb-4 {
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
+  overflow: auto;
 }
 
 .nbryn {
-  position: relative;
+  position: absolute;
   width: 100%;
-  height: 20%;
+  height: 100%;
   min-height: 10rem;
   padding: 12rem 0;
   background: -webkit-gradient(
